# paithon

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  requirements-ml-cpu.txt
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
examples/: advanced_state_policy.py  demo.py  git_review_workflow.py  helper_use_cases.py  ml_mutag_demo.py  redaction_and_rollback_demo.py  review_and_sandbox_demo.py  review_first_workflow.py
src/paithon/: __init__.py  cache.py  context.py  exceptions.py  models.py  provider.py  runtime.py  serializers.py  snapshots.py
src/paithon/_runtime/: __init__.py  constants.py  decorators.py  engine.py  execution.py  functions.py  policy.py  review.py  source.py  state.py  structures.py
templates/real_project/: .gitignore  README.md  pyproject.toml
templates/real_project/src/myproj/: __init__.py  adapters.py  paithon_runtime.py  pricing.py
templates/real_project/tools/: approve_paithon_review.py  export_paithon_git_review.py  export_paithon_review.py  interactive_paithon_review.py  promote_paithon_review.py
tests/: __init__.py  conftest.py
tests/component/: test_failure_modes.py  test_helpers.py  test_next_improvements.py  test_operating_modes.py  test_review_workflow.py  test_runtime.py  test_sandbox_modes.py  test_state_policy.py
tests/integration/: test_examples_cli.py  test_ml_demo.py  test_packaging.py
tests/support/: files.py
tests/unit/: test_cache.py  test_context.py  test_packaging_files.py  test_provider.py  test_runtime_helpers.py  test_runtime_internals.py  test_serializers.py  test_snapshots.py
