[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paithon-jig"
version = "0.1.0"
description = "Guide coding with review-first just-in-time generated and self-healing Python functions."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["llm", "codegen", "runtime", "ai", "review-first", "jig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Homepage = "https://github.com/lorenz0890/paithon"
Repository = "https://github.com/lorenz0890/paithon"
Issues = "https://github.com/lorenz0890/paithon/issues"

dependencies = [
    "openai>=1.101.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast tests for isolated helpers and policy logic",
    "component: runtime engine behavior tests with fake providers and local files",
    "integration: end-to-end tests for demos and example workflows",
]

[tool.setuptools.packages.find]
where = ["src"]