[project]
name = "myproj"
version = "0.1.0"
description = "Example project using PAIthon review-first JIG workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "paithon-jig",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
